Added some footer

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                         Bray Institute of Further Education
                                     </p>
                                     <p class="mb-1">
-                                        <img src="img/Bife-Logo.png" alt="BIFE Logo" class="me-2"
+                                        <img src="img/Bife-3.png" alt="BIFE Logo" class="me-2"
                                             style="width: 25px; height: 25px;">
                                         <strong>Bray Institute of Further Education · June 2021</strong>
                                     </p>
@@ -295,7 +295,7 @@
                                         Bray Institute of Further Education
                                     </p>
                                     <p class="mb-1">
-                                        <img src="img/Bife-Logo.png" alt="BIFE Logo" class="me-2"
+                                        <img src="img/Bife-3.png" alt="BIFE Logo" class="me-2"
                                             style="width: 25px; height: 25px;">
                                         <strong>Bray Institute of Further Education · June 2020</strong>
                                     </p>
@@ -516,30 +516,30 @@
                                     class="me-3" style="width: 50px; height: 50px;">
                                 <div>
                                     <h5 class="fw-bold text-primary">Technological University Dublin</h5>
-                                    <p class="text-light">Bachelor of Science (Honours), Computer/IT Management (Sep
+                                    <p class="text-light">Bachelor of Science (Honours), Computing in IT Management (Sep
                                         2021 - Jun 2025)</p>
                                     <p>Bash/Powershell Scripting, Web Development, Networking, Database Management,
-                                        Programming</p>
+                                        Programming, Cloud computing, IT Management</p>
                                 </div>
                             </div>
                             <!-- Bray Institute Level 6 -->
                             <div class="timeline-item mb-4 d-flex">
-                                <img src="img/Bife-Logo.png" alt="Bray Institute Logo" class="me-3"
+                                <img src="img/Bife-3.png" alt="Bray Institute Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
                                     <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
-                                    <p class="text-light">QQI Level 6 in Computer Networks (Sep 2020 - May 2021)</p>
-                                    <p>Powershell Scripting, Web Development, Networking, Mobile app development.</p>
+                                    <p class="text-light">QQI Level 6 in Computer Networks and Systems (Sep 2020 - May 2021)</p>
+                                    <p>Powershell Scripting, Web Design, Networking, Mobile app development.</p>
                                 </div>
                             </div>
                             <!-- Bray Institute Level 5 -->
                             <div class="timeline-item mb-4 d-flex">
-                                <img src="img/Bife-Logo.png" alt="Bray Institute Logo" class="me-3"
+                                <img src="img/Bife-3.png" alt="Bray Institute Logo" class="me-3"
                                     style="width: 50px; height: 50px;">
                                 <div>
                                     <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
-                                    <p class="text-light">QQI Level 5 in Computer Systems (Sep 2019 - May 2020)</p>
-                                    <p>Web Development, Networking, Programming.</p>
+                                    <p class="text-light">QQI Level 5 in Computer Science (Sep 2019 - May 2020)</p>
+                                    <p>Web Design, Mobile app development, Programming.</p>
                                 </div>
                             </div>
                         </div>
@@ -550,6 +550,14 @@
         <!-- End of Education and Work Experience Section -->
     </main>
     <!-- End of Main Content Placeholder -->
+    <!-- Footer Section -->
+    <footer id="footer" class="py-4">
+        <div class="container text-center">
+            <p class="mb-2">© 2024 Ricardo Danganan Jnr. All Rights Reserved.</p>
+            <a href="#" class="btn btn-primary">Portfolio</a>
+        </div>
+    </footer>
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
