Made the Footer interactive and added some logo

--- a/index.html
+++ b/index.html
@@ -13,39 +13,26 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#hero">My Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#education">Modules Grades</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#education-experience">Work & Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
+    <!-- Navbar Section -->
+    <nav class="custom-navbar sticky-top">
+        <div class="container d-flex justify-content-between align-items-center">
+            <!-- Logo -->
+            <a href="#" class="navbar-logo d-flex align-items-center">
+                <img src="img/RD.png" alt="Logo" class="logo-icon">
+                <span class="ms-2 fw-bold"></span>
+            </a>
+            <!-- Navigation Links -->
+            <div class="navbar-links d-flex align-items-center">
+                <a href="#about" class="nav-item">About</a>
+                <a href="#skills" class="nav-item">Skills</a>
+                <a href="#projects" class="nav-item">Projects</a>
+                <a href="#education-experience" class="nav-item">Work & Education</a>
             </div>
+            <!-- Contact Me Button -->
+            <a href="#contact" class="btn-contact">Contact Me</a>
         </div>
     </nav>
-    <!-- End of Navbar -->
+    <!-- End of Navbar Section -->
 
     <!-- Hero Section -->
     <header id="hero" class="d-flex align-items-center"
@@ -528,7 +515,8 @@
                                     style="width: 50px; height: 50px;">
                                 <div>
                                     <h5 class="fw-bold text-primary">Bray Institute of Further Education</h5>
-                                    <p class="text-light">QQI Level 6 in Computer Networks and Systems (Sep 2020 - May 2021)</p>
+                                    <p class="text-light">QQI Level 6 in Computer Networks and Systems (Sep 2020 - May
+                                        2021)</p>
                                     <p>Powershell Scripting, Web Design, Networking, Mobile app development.</p>
                                 </div>
                             </div>
