--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Portfolio Website</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
@@ -29,10 +31,46 @@
                 <a href="#education-experience" class="nav-item">Work & Education</a>
             </div>
             <!-- Contact Me Button -->
-            <a href="#contact" class="btn-contact">Contact Me</a>
+            <a href="#" class="btn-contact" data-bs-toggle="modal" data-bs-target="#contactModal">Contact Me</a>
         </div>
     </nav>
     <!-- End of Navbar Section -->
+
+    <!-- Contact Modal -->
+    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-primary" id="contactModalLabel">
+                        <img src="img/RD.png" alt="Contact Icon" class="me-2" style="width: 30px;"> Contact Me
+                    </h5>
+                    <button type="button" class="custom-close-btn" data-bs-dismiss="modal" aria-label="Close">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="nameInput" class="form-label text-primary">Your Name</label>
+                            <input type="text" class="form-control" id="nameInput" placeholder="Enter name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="emailInput" class="form-label text-primary">Your Email</label>
+                            <input type="email" class="form-control" id="emailInput" placeholder="Enter email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="messageInput" class="form-label text-primary">Your Message</label>
+                            <textarea class="form-control" id="messageInput" rows="4"
+                                placeholder="Enter message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">
+                            <i class="bi bi-envelope me-2"></i> Send Message
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <header id="hero" class="d-flex align-items-center"
@@ -551,7 +589,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="js/script.js"></script>
 </body>
