--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="navbar-links d-flex align-items-center">
                 <a href="#about" class="nav-item">About</a>
                 <a href="#skills" class="nav-item">Skills</a>
+                <a href="#education" class="nav-item">Grades</a>
                 <a href="#projects" class="nav-item">Projects</a>
                 <a href="#education-experience" class="nav-item">Work & Education</a>
             </div>
@@ -588,9 +589,6 @@
         <source src="img/persona.mp3" type="audio/mp4">
         Your browser does not support the audio element.
     </audio>
-
-
-
     <!-- End of Music Control -->
 
     <!-- Bootstrap CSS -->
@@ -601,5 +599,4 @@
     <!-- Custom JavaScript -->
     <script src="js/script.js"></script>
 </body>
-
 </html>
