--- a/index.html
+++ b/index.html
@@ -23,19 +23,28 @@
                 <img src="img/RD.png" alt="Logo" class="logo-icon">
                 <span class="ms-2 fw-bold"></span>
             </a>
+
+            <!-- Burger Icon for Mobile -->
+            <button class="burger-icon" id="burgerToggle">
+                <span class="burger-line"></span>
+                <span class="burger-line"></span>
+                <span class="burger-line"></span>
+            </button>
+
             <!-- Navigation Links -->
-            <div class="navbar-links d-flex align-items-center">
+            <div class="navbar-links d-flex align-items-center" id="navbarLinks">
                 <a href="#about" class="nav-item">About</a>
-                <a href="#skills" class="nav-item">Skills</a>
-                <a href="#education" class="nav-item">Grades</a>
+                <a href="#skills" class="nav-item">Skills and Grades</a>
                 <a href="#projects" class="nav-item">Projects</a>
                 <a href="#education-experience" class="nav-item">Work & Education</a>
             </div>
+
             <!-- Contact Me Button -->
             <a href="#" class="btn-contact" data-bs-toggle="modal" data-bs-target="#contactModal">Contact Me</a>
         </div>
     </nav>
     <!-- End of Navbar Section -->
+
 
     <!-- Contact Modal -->
     <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
@@ -53,16 +62,15 @@
                     <form>
                         <div class="mb-3">
                             <label for="nameInput" class="form-label text-primary">Your Name</label>
-                            <input type="text" class="form-control" id="nameInput" placeholder="Enter name">
+                            <input type="text" class="form-control" id="nameInput">
                         </div>
                         <div class="mb-3">
                             <label for="emailInput" class="form-label text-primary">Your Email</label>
-                            <input type="email" class="form-control" id="emailInput" placeholder="Enter email">
+                            <input type="email" class="form-control" id="emailInput">
                         </div>
                         <div class="mb-3">
                             <label for="messageInput" class="form-label text-primary">Your Message</label>
-                            <textarea class="form-control" id="messageInput" rows="4"
-                                placeholder="Enter message"></textarea>
+                            <textarea class="form-control" id="messageInput" rows="4"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">
                             <i class="bi bi-envelope me-2"></i> Send Message
@@ -245,7 +253,7 @@
                             <div class="accordion-body">
                                 <p class="mb-1">
                                     <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo"
-                                        class="me-2" style="width: 25px; height: 25px;">
+                                        class="me-2" style="width: 25px; height: 25px; ">
                                     <strong>Technological University Dublin · June 2022</strong>
                                 </p>
                                 <ul>
@@ -268,7 +276,7 @@
                     <!-- Honors and Awards -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingHonors">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseHonors" aria-expanded="false" aria-controls="collapseHonors">
                                 Honors & Awards
                             </button>
@@ -590,13 +598,32 @@
         Your browser does not support the audio element.
     </audio>
     <!-- End of Music Control -->
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+   
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="js/script.js"></script>
+
+    <!-- Custom JavaScript for Navbar Burger Toggle -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const burgerToggle = document.getElementById('burgerToggle');
+            const navbarLinks = document.getElementById('navbarLinks');
+
+            burgerToggle.addEventListener('click', function () {
+                navbarLinks.classList.toggle('active');
+            });
+
+            // Close the menu if clicking outside of it
+            document.addEventListener('click', function (e) {
+                if (!burgerToggle.contains(e.target) && !navbarLinks.contains(e.target)) {
+                    navbarLinks.classList.remove('active');
+                }
+            });
+        });
+    </script>
+    <!-- End of Custom JavaScript for Navbar Burger Toggle -->
 </body>
+
 </html>
