Changed the work experience section for Typetec

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                                 <div>
                                     <h5 class="fw-bold text-primary">Intern Technical Support Engineer</h5>
                                     <p class="text-light">Typetec (Jan 2024 - Aug 2024, 8 months)</p>
-                                    <p>Dublin, Ireland (On-site)</p>
+                                    <p>Dublin, Ireland (Hybrid)</p>
                                     <p>IT Desktop Support, Cybersecurity Monitoring, Installations and Managing User
                                         Accounts.</p>
                                 </div>
@@ -584,7 +584,7 @@
     <footer id="footer" class="py-4">
         <div class="container text-center">
             <p class="mb-2">© 2024 Ricardo Danganan Jnr. All Rights Reserved.</p>
-            <a href="#" class="btn btn-primary">Portfolio</a>
+            <a href="#" class="btn btn-primary">Download my CV</a>
         </div>
     </footer>
 
