--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 <div class="row">
                     <!-- Work Experience Section -->
                     <div class="col-md-6">
-                        <h3 class="fw-bold text-light text-center mb-4">Work Experience</h3>
+                        <h3 class="fw-bold text-light text-center mb-4"><i class="bi bi-briefcase me-2"></i>Work Experience</h3>
                         <div class="timeline">
                             <!-- Typetec -->
                             <div class="timeline-item mb-4 d-flex">
@@ -537,7 +537,7 @@
                     </div>
                     <!-- Education Section -->
                     <div class="col-md-6">
-                        <h3 class="fw-bold text-light text-center mb-4">Education</h3>
+                        <h3 class="fw-bold text-light text-center mb-4"><i class="fa fa-graduation-cap me-2"></i>Education</h3>
                         <div class="timeline">
                             <!-- Technological University Dublin -->
                             <div class="timeline-item mb-4 d-flex">
