added some colour highlights on the Grades section

--- a/index.html
+++ b/index.html
@@ -257,18 +257,20 @@
                                     <strong>Technological University Dublin · June 2022</strong>
                                 </p>
                                 <ul>
-                                    <li>Software Development 1 - A</li>
-                                    <li>Discrete Mathematics 1 - B</li>
-                                    <li>Visual Design and User Experience - A</li>
-                                    <li>Critical Skills Development - B+</li>
-                                    <li>Computer Architecture - A</li>
-                                    <li>Business & Information Systems - B+</li>
-                                    <li>Software Development 2 - A</li>
-                                    <li>Systems Analysis - B+</li>
-                                    <li>Database Fundamentals - A</li>
-                                    <li>Statistics - B</li>
-                                    <li>Operating Systems Fundamentals - A</li>
-                                    <li>Social Media Communications - A</li>
+                                    <ul>
+                                        <li>Software Development 1 - <span class="grade-a">A</span></li>
+                                        <li>Discrete Mathematics 1 - <span class="grade-b">B</span></li>
+                                        <li>Visual Design and User Experience - <span class="grade-a">A</span></li>
+                                        <li>Critical Skills Development - <span class="grade-b-plus">B+</span></li>
+                                        <li>Computer Architecture - <span class="grade-a">A</span></li>
+                                        <li>Business & Information Systems - <span class="grade-b-plus">B+</span></li>
+                                        <li>Software Development 2 - <span class="grade-a">A</span></li>
+                                        <li>Systems Analysis - <span class="grade-b-plus">B+</span></li>
+                                        <li>Database Fundamentals - <span class="grade-a">A</span></li>
+                                        <li>Statistics - <span class="grade-b">B</span></li>
+                                        <li>Operating Systems Fundamentals - <span class="grade-a">A</span></li>
+                                        <li>Social Media Communications - <span class="grade-a">A</span></li>
+                                      </ul>                                      
                                 </ul>
                             </div>
                         </div>
