Changed the project section into Carousel card slider format

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                         <li>Statistics - <span class="grade-b">B</span></li>
                                         <li>Operating Systems Fundamentals - <span class="grade-a">A</span></li>
                                         <li>Social Media Communications - <span class="grade-a">A</span></li>
-                                      </ul>                                      
+                                    </ul>
                                 </ul>
                             </div>
                         </div>
@@ -346,7 +346,6 @@
 
         <!-- Projects Section -->
         <section id="projects" class="py-5">
-
             <hr class="section-divider"> <!-- Section Divider -->
 
             <div class="container">
@@ -366,113 +365,79 @@
 
                     <!-- Carousel Items -->
                     <div class="carousel-inner">
-                        <!-- Bike Rental System -->
+                        <!-- Slide 1 -->
                         <div class="carousel-item active">
-                            <div class="card mx-auto" style="width: 75%;">
-                                <div class="card-body">
-                                    <h5 class="card-title fw-bold">Bike Rental System</h5>
-                                    <p class="card-text">
-                                        My final project for my second year, the Bike Rental System, is a responsive,
-                                        user-friendly website
-                                        that allows users to browse, book, subscribe to newsletters, and manage bike
-                                        rentals. Features include
-                                        user registration with Supabase, Google Maps API integration for browsing rental
-                                        locations, and real-time
-                                        updates on bike availability and pricing using MQTT.
-                                    </p>
-                                    <p>
-                                        <span class="badge bg-info text-dark">CSS (33.7%)</span>
-                                        <span class="badge bg-warning text-dark">JavaScript (31.6%)</span>
-                                        <span class="badge bg-primary">HTML (23.5%)</span>
-                                        <span class="badge bg-dark">Shell (10.8%)</span>
-                                        <span class="badge bg-secondary">Python (0.4%)</span>
-                                    </p>
-                                    <a href="https://github.com/YourGitHubLink/Bike-Rental-System" target="_blank"
-                                        class="btn btn-primary">View on GitHub</a>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <img src="img/2nd-YearProject-1.jpg" class="card-img-top"
+                                            alt="Bike Rental System">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title">Bike Rental System</h5>
+                                            <a href="#" class="btn btn-primary">Show More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <img src="img/JAVA-text-base-RPG-1.jpg" class="card-img-top"
+                                            alt="Java Text-Based RPG">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title">Java Text-Based RPG</h5>
+                                            <a href="#" class="btn btn-primary">Show More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <img src="img/First-Year-Project.jpg" class="card-img-top"
+                                            alt="First Year Web Development Project">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title">First Year Web Design Project</h5>
+                                            <a href="#" class="btn btn-primary">Show More</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- Java Text-Based RPG -->
+                        <!-- Slide 2 -->
                         <div class="carousel-item">
-                            <div class="card mx-auto" style="width: 75%;">
-                                <div class="card-body">
-                                    <h5 class="card-title fw-bold">Java Text-Based RPG</h5>
-                                    <p class="card-text">
-                                        Part of my final project for the Computer Science PLC, this project focuses on a
-                                        text-based
-                                        old-school RPG built entirely using Java. The game emphasizes user interaction
-                                        through text commands
-                                        and features story progression, enemy encounters, and inventory management.
-                                    </p>
-                                    <p>
-                                        <span class="badge bg-warning text-dark">Java (100%)</span>
-                                    </p>
-                                    <a href="https://github.com/YourGitHubLink/Java-Text-Based-RPG" target="_blank"
-                                        class="btn btn-primary">View on GitHub</a>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <img src="img/4th-Year-Project-1.jpg" class="card-img-top"
+                                            alt="Gaming Dashboard Overview">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title">Gaming Dashboard Overview</h5>
+                                            <a href="#" class="btn btn-primary">Show More</a>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <!-- First Year Web Development Project -->
-                        <div class="carousel-item">
-                            <div class="card mx-auto" style="width: 75%;">
-                                <div class="card-body">
-                                    <h5 class="card-title fw-bold">First Year Web Development Project</h5>
-                                    <p class="card-text">
-                                        Part of my first-year web development module, this project highlights the
-                                        modules I took during my
-                                        first year. It features an elegant, responsive design using HTML and CSS and
-                                        serves as an introduction
-                                        to web development concepts like semantic structure, styling, and accessibility.
-                                    </p>
-                                    <p>
-                                        <span class="badge bg-info text-dark">CSS (52.6%)</span>
-                                        <span class="badge bg-danger">HTML (47.4%)</span>
-                                    </p>
-                                    <a href="https://github.com/YourGitHubLink/First-Year-Web-Dev-Project"
-                                        target="_blank" class="btn btn-primary">View on GitHub</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Gaming Dashboard Overview -->
-                        <div class="carousel-item">
-                            <div class="card mx-auto" style="width: 75%;">
-                                <div class="card-body">
-                                    <h5 class="card-title fw-bold">Gaming Dashboard Overview</h5>
-                                    <p class="card-text">
-                                        This project is my final project for the fourth year, a comprehensive gaming
-                                        dashboard for Steam users that combines game optimization,
-                                        game management, community interaction, and analytics. This platform serves as a
-                                        central hub for managing the gaming experience, including game recommendations,
-                                        performance monitoring, price tracking, and community engagement.
-                                    </p>
-                                    <p>
-                                        <span class="badge bg-info text-dark">Node.js</span>
-                                        <span class="badge bg-primary">React.js</span>
-                                        <span class="badge bg-info text-dark">CSS</span>
-                                        <span class="badge bg-danger">HTML</span>
-                                        <span class="badge bg-dark">PowerShell</span>
-                                    </p>
-                                    <a href="https://github.com/YourGitHubLink/First-Year-Web-Dev-Project"
-                                        target="_blank" class="btn btn-primary">View on GitHub</a>
-                                    <span class="badge bg-success">In Development</span>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <img src="img/Game-Performance-Monitor-1.jpg" class="card-img-top"
+                                            alt="Additional Project">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title">Performance Optimization</h5>
+                                            <a href="#" class="btn btn-primary">Show More</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- Carousel Controls -->
-                    <button class="carousel-control-prev custom-prev" type="button" data-bs-target="#projectsCarousel"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel"
                         data-bs-slide="prev">
-                        <img src="img/previous-3.png" alt="Previous" class="custom-arrow">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next custom-next" type="button" data-bs-target="#projectsCarousel"
+                    <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel"
                         data-bs-slide="next">
-                        <img src="img/next-3.png" alt="Next" class="custom-arrow">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
-                    <!-- End of Carousel Controls -->
-
                 </div>
             </div>
         </section>
@@ -488,7 +453,8 @@
                 <div class="row">
                     <!-- Work Experience Section -->
                     <div class="col-md-6">
-                        <h3 class="fw-bold text-light text-center mb-4"><i class="bi bi-briefcase me-2"></i>Work Experience</h3>
+                        <h3 class="fw-bold text-light text-center mb-4"><i class="bi bi-briefcase me-2"></i>Work
+                            Experience</h3>
                         <div class="timeline">
                             <!-- Typetec -->
                             <div class="timeline-item mb-4 d-flex">
@@ -539,7 +505,8 @@
                     </div>
                     <!-- Education Section -->
                     <div class="col-md-6">
-                        <h3 class="fw-bold text-light text-center mb-4"><i class="fa fa-graduation-cap me-2"></i>Education</h3>
+                        <h3 class="fw-bold text-light text-center mb-4"><i
+                                class="fa fa-graduation-cap me-2"></i>Education</h3>
                         <div class="timeline">
                             <!-- Technological University Dublin -->
                             <div class="timeline-item mb-4 d-flex">
@@ -600,7 +567,7 @@
         Your browser does not support the audio element.
     </audio>
     <!-- End of Music Control -->
-   
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
